- Added a new AuthorizationModule which combines a JNDI and InfoGlue's own auth module into one source.
- Improved Authorization system so any number of sources can be combined and each user/role/group can be edited etc if that source it came from supports it.
- Added new JDBC/Infoglue authorization module which can combine those two sources.
- Worked more on having a single source for database definitions for all frameworks which are also manageable through a interface. This is to be able to drop the infoglue wars in the app server and then just set up the database connection and go from there.
- Defeated the IE cache refresh bug which before made tree not update after change in Internet Explorer.
- Fixed an option when importing so only the latest versions are imported.
- Made intuitive rights transfer GUI:s so one can duplicate one user's/group's/role's rights to another. This makes it easier to move between authorization systems. 
- Added fix so that internal http-calls from InfoGlue does not trigger the update cache filter as that can lead to locks in working environment and a hung system. 
- Made JNDI adaptor more efficient and adding a possibility to cache roles, users and groups for a period of time (definable for each in properties).
- Added possiblity to delete old content versions so one can clean up a huge database. A new button comes up when you enter a earlier version than the latest.
- Changed so table width when used in FCKEditor by default is set to 75% instead of pixels
- Upgraded to FCKEditor 2.3.1 from the 2.2 version we had before
- Improved import utility by adding failchecks, better handling of errors and also fixed bug which did not account for relations to contents and pages created by a relation editor.'
- Fixed bug in component caching which could lead to wrong component being fetched. 
- Added better caching in some areas (content types, component properties) which improves dynamic pages a lot and decreases the xml/xpath cost.