@@ -40,7 +40,7 @@ Abbreviated Changelog from 2.3.5 Final
 - Added a new AuthorizationModule which combines a JNDI and InfoGlue's own auth module into one source.
 - Improved Authorization system so any number of sources can be combined and each user/role/group can be edited etc if that source it came from supports it.
 - Added new JDBC/Infoglue authorization module which can combine those two sources.
-- Worked more on having a single source for database definitions for all frameworks which are also manageable through a interface. This is to be able to drop the infoglue wars in the app server and then just set up the database connection and go from there.
+- Worked more on having a single source for database definitions for all frameworks which are also manageable through a interface. This is to be able to drop the infoglue wars in the app server and then just set up the database connection and go from there. Not ready yet.
 - Defeated the IE cache refresh bug which before made tree not update after change in Internet Explorer.
 - Fixed an option when importing so only the latest versions are imported.
 - Made intuitive rights transfer GUI:s so one can duplicate one user's/group's/role's rights to another. This makes it easier to move between authorization systems. 
@@ -74,6 +74,7 @@ Abbreviated Changelog from 2.3.5 Final
 - Removed hard set of javax.xmk.transform.TransformFactory in PortletDispatcher - was messing with other applications ect and was marked as just a test.
 - Made startup output a bit nicer and more informative
 - Added more debug info to broken component references so one can see exact which page has the broken reference.
+- Added check for sitenodes with no siteNodeVersions - only found on siteNodes with no metaInfoContentId however. After an upgrade from 1.3.2 to 2.4 for example we suggest one run validation at least 2 times to optimize the database.
 
 -------------------------------------------------------------------------------------
 - InfoGlue 2.3.5 Final
